<resources>
    <string name="app_name">Builders Hub</string>
    <string name="tagline">Construct your future plan</string>
    <string name="footer_text">© Copyright Builders Hub 2022. All rights reserved</string>

    <string name="login_here"> <u>Login Here</u> </string>
    <string name="login">Login Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_details_to_continue">Enter your details to continue</string>
    <string name="let_s_get_to_know_you">Let\'s get to know you!</string>
    <string name="by_clicking_on_create_account_button_you_agree_to_terms_of_use_and_privacy_policy">By Clicking On \'CREATE ACCOUNT\' Button,You agree to Terms of Use and Privacy Policy</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error">ERROR</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="please_login_with_your_credentials">Please login with your credentials</string>
    <string name="create_an_account_here">Create an account here</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="log_in">LOGIN</string>
    <string name="logo">LOGO</string>
    <string name="interaction">Interaction</string>
    <string name="between_workers_and_users">between Workers and Users</string>
    <string name="todo">TODO</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">SUBMIT</string>
    <string name="reset_your_password">Please enter your account’s email address and we will send you a link to reset your password.</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="log_out">Log Out</string>



    <string name="local_workers">Local Workers</string>
    <string name="on_demand_services">On-Demand Services</string>
    <string name="_24_7_available">24/7 Available</string>
    <string name="puttur">Puttur</string>


    <string name="book_now">Book Now</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="my_bookings">My Bookings</string>
    <string name="summary_note">Summary Note : Once the Booking is Accepted , Please Discuss and Finalize the Work Requirements and Charges / Amount Directly with the Service Provider .</string>

    <string name="about_us_1"><br>In this developing digital era, the bulk of systems is leaning toward the adoption of digital technologies. Even the pandemic provided an opportunity for people to learn about and apply digital innovations. The main goal is to provide a digital platform for managing a quick and permissive working environment between Us and Construction Workers.</br></string>
    <string name="about_us_2"><br>Mr. Mohammad is a successful government-accredited contractor from Putturs Kabaka village. He has more than 37 years of contracting experience. He worked on a range of government projects, including road and bridge construction, Panchayath building construction, and school construction.</br></string>

    <array name="worker_type">
        <item>Labour</item>
        <item>Mistri</item>
        <item>Tiles/Marble Mistri</item>
        <item>Painter</item>
        <item>Furniture Works</item>
        <item>Plumber</item>
        <item>Welder</item>
        <item>Electrician</item>
    </array>


    <string name="rate_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>


    <array name="categories_list">
        <item>Select Category</item>
        <item>Labour</item>
        <item>Mistri</item>
        <item>Tiles/Marble Mistri</item>
        <item>Painter</item>
        <item>Furniture Works</item>
        <item>Plumber</item>
        <item>Welder</item>
        <item>Electrician</item>
    </array>


    <string name="worker_type">Worker Type:</string>
    <string name="add_new_worker">Add New Worker</string>
    <string name="my_orders">Manage Orders</string>

    <string-array name="materialsModel">
        <item>Select Material</item>
        <item>Cement</item>
        <item>Steel 10 mm</item>
        <item>Red Clay Bricks</item>
        <item>M-Sand</item>
        <item>Induction Motos</item>
        <item>Aggregate 12 mm</item>
    </string-array>

    <string name="enter_project_name">Project Site Name</string>
    <string name="address">Addess</string>
    <string name="City">City</string>
    <string name="attendance_for_today">Attendance for today is taken, Comeback tomorrow</string>

</resources>