<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="5dp"
    android:background="@drawable/alert_dialog_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:id="@+id/animation_view"
            app:lottie_rawRes="@raw/add_icon"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_margin="10dp"
            app:lottie_speed="0.6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="X"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_medium"
            android:layout_margin="5dp"
            android:textColor="#ff0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/p_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:textColor="#0F1051"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_project_name"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:padding="10dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/p_address"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:ems="10"
        android:textColor="#0F1051"
        android:hint="@string/address"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:maxLength="20"
        android:padding="10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/p_city"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="10dp"
        android:ems="10"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/City"
        android:textColor="#0F1051"
        android:inputType="text"
        android:maxLength="10"
        android:padding="10dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="Create Project"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_layout"
        android:textColor="#ffffff" />


</LinearLayout>